--- a/chivasR/src/test.html
+++ b/chivasR/src/test.html
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
-
-<html>
-<head>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400, 600' rel='stylesheet' type='text/css'>
-    <link href='./assets/style.css' rel='stylesheet' type='text/css'/>
-  </head>
-  <body>
-    <header>
-        <nav>
-            <ul>
-              <li> Santuario Rojiblanco </li> <li> buscar </li> <li> Registrate </li> <li> Iniciar sesion </li>
-            </ul>
-          </nav>
-    </header>
-  </body>
-
-
-</html>
+<body>
+  <div id="root"></div>
+</body>
